# openresult-games

./: .gitignore  .gitmodules  README.md  pyproject.toml
results/ch_base_twoplayer_cot/comfy-terrain-3699/: log_env.json
results/ch_base_twoplayer_cot/dandy-wind-3697/: log_env.json
results/ch_base_twoplayer_cot/dazzling-sun-3654/: log_env.json
results/ch_base_twoplayer_cot/hardy-sound-3658/: log_env.json
results/ch_base_twoplayer_cot/hopeful-blaze-3648/: log_env.json
results/ch_base_twoplayer_cot/lucky-yogurt-3662/: log_env.json
results/ch_base_twoplayer_cot/northern-jazz-3700/: log_env.json
results/ch_base_twoplayer_cot/northern-snowball-3652/: log_env.json
results/ch_base_twoplayer_cot/restful-water-3636/: log_env.json
results/ch_base_twoplayer_cot/sandy-wood-3656/: log_env.json
results/ch_base_twoplayer_cot/sparkling-blaze-3698/: log_env.json
results/ch_base_twoplayer_cot/stoic-surf-3706/: log_env.json
results/ch_base_twoplayer_cot/summer-cherry-3702/: log_env.json
results/ch_base_twoplayer_cot/sunny-waterfall-3663/: log_env.json
results/ch_base_twoplayer_cot/swept-sound-3696/: log_env.json
results/ch_base_twoplayer_cot/vibrant-deluge-3701/: log_env.json
results/ch_base_twoplayer_cot/vital-glitter-3650/: log_env.json
results/ch_base_twoplayer_cot/wandering-valley-3704/: log_env.json
results/ch_base_twoplayer_cot/whole-moon-3695/: log_env.json
results/ch_base_twoplayer_cot/worldly-snowflake-3660/: log_env.json
results/ch_base_twoplayer_tofm_cot/apricot-frost-3725/: log_env.json
src/moralsim/: main.py
(+1195 files in other folders)
