[project]
name = "moralsim"
version = "0.1.0"
description = "Moral Behavior in Social Dilemma Simulation (Moralsim)"
authors = [{ name = "Steffen Backmann", email = "sbackmann@ethz.ch" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "wandb",
    "pettingzoo",
    "hydra_core",
    "sentence_transformers",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
